# churn-analysis-part4

./: Dockerfile  README.md  monitoring_plan.md  pyproject.toml  requirements.txt
app/: main.py
model/: metrics.json  model.pkl
tests/: test_api.py
