[project]
name = "part-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.47.0",
    "xgboost>=3.2.0",
]
